--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#Projects">Projects</a>
         <a href="#Skills">Skills</a>
         <a href="#Courses">Courses</a>
-        <a href="#Hobbies">hobbies</a>
+        <a href="#hobbies">Hobbies</a>
     </div>
     
     <div class="box">
@@ -129,7 +129,7 @@
     </div>
     
     <footer>
-        <h2>Copyright © 2023 Alapaty Sathvika Reddy.</h2>
+        <h2>Copyright © 2024 Alapaty Sathvika Reddy.</h2>
     </footer>
 
 </body>
